--- a/demo/index.html
+++ b/demo/index.html
@@ -4,9 +4,9 @@
   <head>
       <meta charset="utf-8">
       <title>react-bash</title>
-      <meta name="author" content="Zack Argyle">
+      <meta name="author" content="Airwavves">
       <style>
-        body { background-color: #000; margin: 0; }
+        body { background-color: rgb(59, 59, 59); margin: 0; }
         #app { margin: 50px auto; width: 630px; height: 450px; }
         input:focus { outline: none; }
       </style>
