--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
       <meta charset="utf-8">
-      <title>react-bash</title>
+      <title>1994 | ARG</title>
       <meta name="author" content="Airwavves">
       <style>
         body { background-color: rgb(59, 59, 59); margin: 0; }
